cabal-version: 1.12
-- Arquivo baseado no tutorial por Ranjit Jhala

name:           liquidhaskell-example
version:        0.2.0.0
category:       Web
homepage:       http://example.com
author:         Emilio Francesquini
maintainer:     e.francesquini@ufabc.edu.br
copyright:      Emilio Francesquini
license:        MIT
license-file:   LICENSE
build-type:     Simple

executable lh-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      liquid-base
    , liquid-bytestring
    , liquid-containers
    , liquid-vector
    , liquidhaskell
  ghc-options: -fdefer-type-errors -fplugin=LiquidHaskell
